--- a/k8s/service.yml
+++ b/k8s/service.yml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: ray
+  name: afvbhyjiklm
   annotations:
     dev.okteto.com/auto-ingress: "true"
 spec:
   type: ClusterIP  
   ports:
-  - name: "ray"
+  - name: "afvbhyjiklm"
     port: 8080
   selector:
-    app: ray
+    app: afvbhyjiklm
