--- a/k8s/service.yml
+++ b/k8s/service.yml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: racexsgvn
+  name: heriuom
   annotations:
     dev.okteto.com/auto-ingress: "true"
 spec:
   type: ClusterIP  
   ports:
-  - name: "racexsgvn"
+  - name: "heriuom"
     port: 8080
   selector:
-    app: racexsgvn
+    app: heriuom
