--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,34 +1,34 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: heriuom
+  name: huaernmo
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: heriuom
+      app: huaernmo
   template:
     metadata:
       labels:
-        app: heriuom
+        app: huaernmo
     spec:
       containers:
-      - image: okteto.dev/heriuom:latest
-        name: heriuom
+      - image: okteto.dev/huaernmo:latest
+        name: huaernmo
         ports:
         - containerPort: 8080
         env:
         - name: PORT
           value: "8080"
         - name: ProxySite
-          value: "www.anime-planet.com"
+          value: "www.plex.tv"
         - name: Vless_UUID
-          value: "dbf1d0d5-6ee5-4e9a-81cb-2098ceb24a48"
+          value: "3192a591-b182-4d44-93f6-4eb34490a8e0"
         - name: Vless_Path
-          value: "/avplkrgh"
+          value: "/ZE6JHFI"
         - name: Vmess_UUID
-          value: "dbf1d0d5-6ee5-4e9a-81cb-2098ceb24a48"
+          value: "3192a591-b182-4d44-93f6-4eb34490a8e0"
         - name: Vmess_Path
-          value: "/PREXCSZ"
+          value: "/EAXI6G"
         - name: Share_Path
-          value: "/Share615"
+          value: "/Share039"
